test/asm/invalid-ldh.asm
SECTION "test", ROM0
ldh [$11], a
ldh a, [$22]
